tink-ffi-sys/ffi/include/tink_ffi.h

/* --------------------------------------------------------------------------
 * Opaque handle types
 * -------------------------------------------------------------------------- */
typedef struct TinkKeysetHandle TinkKeysetHandle;
typedef struct TinkJwtSigner TinkJwtSigner;
typedef struct TinkJwtVerifier TinkJwtVerifier;
typedef struct TinkPrfSet TinkPrfSet;
typedef struct TinkKeysetDeriver TinkKeysetDeriver;
/* --------------------------------------------------------------------------
 * JWT Public Key Sign / Verify
 * -------------------------------------------------------------------------- */
int tink_jwt_signer_new(const TinkKeysetHandle *handle,
                        TinkJwtSigner **signer_out);
int tink_jwt_signer_sign_and_encode(const TinkJwtSigner *signer,
                                    const char *raw_jwt_json,
                                    char **compact_out);
void tink_jwt_signer_free(TinkJwtSigner *signer);
int tink_jwt_verifier_new(const TinkKeysetHandle *handle,
                          TinkJwtVerifier **verifier_out);
int tink_jwt_verifier_verify_and_decode(const TinkJwtVerifier *verifier,
                                        const char *compact,
                                        const char *validator_json,
                                        char **claims_json_out);
void tink_jwt_verifier_free(TinkJwtVerifier *verifier);
/* --------------------------------------------------------------------------
 * PRF Set
 * -------------------------------------------------------------------------- */
int tink_prf_set_new(const TinkKeysetHandle *handle,
                     TinkPrfSet **prf_set_out);
int tink_prf_set_primary_id(const TinkPrfSet *prf_set, uint32_t *id_out);
int tink_prf_set_compute_primary(const TinkPrfSet *prf_set,
                                 const uint8_t *input, size_t input_len,
                                 size_t output_len,
                                 uint8_t **output_out,
                                 size_t *output_len_out);
/* Get all key IDs from a PrfSet. Caller must free key_ids_out with
 * tink_free_bytes(key_ids_out, num_keys * sizeof(uint32_t)). */
int tink_prf_set_key_ids(const TinkPrfSet *prf_set,
                         uint32_t **key_ids_out, size_t *num_keys_out);
/* Compute PRF output for a specific key ID. */
int tink_prf_set_compute(const TinkPrfSet *prf_set,
                         uint32_t key_id,
                         const uint8_t *input, size_t input_len,
                         size_t output_len,
                         uint8_t **output_out, size_t *output_len_out);
void tink_prf_set_free(TinkPrfSet *prf_set);
/* --------------------------------------------------------------------------
 * Keyset Derivation
 * -------------------------------------------------------------------------- */
int tink_keyset_deriver_new(const TinkKeysetHandle *handle,
                            TinkKeysetDeriver **deriver_out);
int tink_keyset_deriver_derive(const TinkKeysetDeriver *deriver,
                               const uint8_t *salt, size_t salt_len,
                               TinkKeysetHandle **derived_handle_out);
void tink_keyset_deriver_free(TinkKeysetDeriver *deriver);