tink-ffi-sys/src/lib.rs


    // -----------------------------------------------------------------------
    // JWT Public Key Sign / Verify
    // -----------------------------------------------------------------------
    pub fn tink_jwt_signer_new(
        handle: *const TinkKeysetHandle,
        signer_out: *mut *mut TinkJwtSigner,
    ) -> c_int;

    pub fn tink_jwt_signer_sign_and_encode(
        signer: *const TinkJwtSigner,
        raw_jwt_json: *const c_char,
        compact_out: *mut *mut c_char,
    ) -> c_int;

    pub fn tink_jwt_signer_free(signer: *mut TinkJwtSigner);

    pub fn tink_jwt_verifier_new(
        handle: *const TinkKeysetHandle,
        verifier_out: *mut *mut TinkJwtVerifier,
    ) -> c_int;

    pub fn tink_jwt_verifier_verify_and_decode(
        verifier: *const TinkJwtVerifier,
        compact: *const c_char,
        validator_json: *const c_char,
        claims_json_out: *mut *mut c_char,
    ) -> c_int;

    pub fn tink_jwt_verifier_free(verifier: *mut TinkJwtVerifier);

    // -----------------------------------------------------------------------
    // PRF Set
    // -----------------------------------------------------------------------
    pub fn tink_prf_set_new(
        handle: *const TinkKeysetHandle,
        prf_set_out: *mut *mut TinkPrfSet,
    ) -> c_int;

    pub fn tink_prf_set_primary_id(prf_set: *const TinkPrfSet, id_out: *mut u32) -> c_int;

    pub fn tink_prf_set_compute_primary(
        prf_set: *const TinkPrfSet,
        input: *const u8,
        input_len: usize,
        output_len: usize,
        output_out: *mut *mut u8,
        output_len_out: *mut usize,
    ) -> c_int;

    pub fn tink_prf_set_key_ids(
        prf_set: *const TinkPrfSet,
        key_ids_out: *mut *mut u32,
        num_keys_out: *mut usize,
    ) -> c_int;

    pub fn tink_prf_set_compute(
        prf_set: *const TinkPrfSet,
        key_id: u32,
        input: *const u8,
        input_len: usize,
        output_len: usize,
        output_out: *mut *mut u8,
        output_len_out: *mut usize,
    ) -> c_int;

    pub fn tink_prf_set_free(prf_set: *mut TinkPrfSet);

    // -----------------------------------------------------------------------
    // Keyset Derivation
    // -----------------------------------------------------------------------
    pub fn tink_keyset_deriver_new(
        handle: *const TinkKeysetHandle,
        deriver_out: *mut *mut TinkKeysetDeriver,
    ) -> c_int;

    pub fn tink_keyset_deriver_derive(
        deriver: *const TinkKeysetDeriver,
        salt: *const u8,
        salt_len: usize,
        derived_handle_out: *mut *mut TinkKeysetHandle,
    ) -> c_int;

    pub fn tink_keyset_deriver_free(deriver: *mut TinkKeysetDeriver);
}
